Bug 141701 - EDITING Crash when closing 3D View dialog of 3D chart
Summary: EDITING Crash when closing 3D View dialog of 3D chart
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2021-04-15 08:24 UTC by NISZ LibreOffice Team
Modified: 2021-04-17 15:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (22.62 KB, application/vnd.oasis.opendocument.text)
2021-04-15 08:24 UTC, NISZ LibreOffice Team
Details
gdb bt (7.85 KB, text/plain)
2021-04-15 21:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-04-15 08:24:37 UTC
Created attachment 171217 [details]
Example file

Attached document contains a simple 3D barchart.
When the 3D View dialog is opened and closed Writer crashes.

Steps to reproduce:
    1. Open attached document
    2. Edit the chart, go to Format - 3D View 
    3. Press OK without doing anything in the dialog

Actual results:
Crash

Expected results:
No crash

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 77419c6f3aba1fd5b1660795923c22a39bdb1bad
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

Additional Information: 

Bibisected using bibisect-win64-7.2 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=1d2773807f6d2deb1181ef4b14fbdd49ca1d5c14

author	Noel <noel.grandin@collabora.co.uk>	2021-03-05 10:47:16 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-03-07 13:24:51 +0100

ref-count SdrPage

Adding CC to: Noel Grandin
Comment 1 Xisco Faulí 2021-04-15 08:30:31 UTC
Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: a199e4ea389c934d169a178433f4b94033e60f93
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Julien Nabet 2021-04-15 21:03:19 UTC
Created attachment 171226 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this
Comment 3 Commit Notification 2021-04-17 14:50:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7852fdc1ae87434e06bbbfd05a349c4624fbfd50

tdf#141701 Crash when closing 3D View dialog of 3D chart

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2021-04-17 15:47:29 UTC
With master sources updated after Noel's patch, I don't reproduce this anymore.
Thank you Noel! :-)