tdf#141701 Crash when closing 3D View dialog of 3D chart

regression from
    commit 1d2773807f6d2deb1181ef4b14fbdd49ca1d5c14
    ref-count SdrPage
we need to clear the SdrPage which releases some objects
or some unhelpful DBG_UTIL mode code in ~SdrObject will
kick in and try and release objects, but it ends
up deleting child objects before parent objects,
which cau

Change-Id: Iaad89a05a30c119807beacc54aaa66b6fde634e3